[web] rename assets

--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -9,7 +9,6 @@ input {
 	@apply input bg-white text-center text-black;
 }
 
-
 html {
-	background-image: url(/paper.jpg)
+	background-image: url(/ui/layouts/paper.jpg);
 }
