--- a/packages/config/app.css
+++ b/packages/config/app.css
@@ -1,4 +1,5 @@
 @import '@fontsource/fira-code';
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -32,4 +33,8 @@ html {
 
 ::-moz-selection {
 	@apply bg-primary text-primary-content;
+}
+
+.font-dot-gothic {
+	font-family: 'DotGothic16', sans-serif;
 }
