--- a/packages/config/app.css
+++ b/packages/config/app.css
@@ -1,5 +1,5 @@
 @import '@fontsource/fira-code';
-@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+@import '@fontsource/dotgothic16';
 
 @tailwind base;
 @tailwind components;
